Repair bad merges

--- a/config/api.yml
+++ b/config/api.yml
@@ -149,11 +149,42 @@ xaNsDataSourceFactory:
   xaProperties:
       url: ${DB_NS_JDBC_URL}
 
+xaCmsRsDataSourceFactory:
+  autoCommitByDefault: false
+  driverClass: com.ibm.db2.jcc.DB2Driver
+  user: ${DB_CMS_USER}
+  password: ${DB_CMS_PASSWORD}
+  url: ${DB_CMS_JDBC_URL}
+  xaDataSourceClassName: com.ibm.db2.jcc.DB2XADataSource
+  validationQuery: "/* XA/CMS Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
+  logValidationErrors: true
+  initialSize: 2
+  minSize: 2
+  maxSize: ${DB_CMS_CP_MAX_SIZE:-8}
+  minIdleTime: 1 minute
+  properties:
+      hibernate.dialect: org.hibernate.dialect.DB2Dialect
+      hibernate.show_sql: false
+      hibernate.default_schema: ${DB_CMSRS_SCHEMA}
+      hibernate.connection.autocommit: false
+      hibernate.current_session_context_class: jta
+      hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
+      hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
+      hibernate.connection.release_mode: auto
+      connection.release_mode: auto
+      # hibernate.connection.provider_disables_autocommit: true
+  xaProperties:
+      # Properties for DB2XADataSource
+      serverName: ${DB_CMS_HOST:-localhost}
+      portNumber: ${DB_CMS_PORT:-50000}
+      databaseName: ${DB_CMS_SERVICE:-DB0TDEV}
+      driverType: 4 # Type4 connection for DB2 DataSource
+
 elasticsearch:
   # Screenings index
   screeningsIndex:
     # The old "elasticsearch.host" and "elasticsearch.port" will still work but not required when "elasticsearch.nodes" is provided.
-    elasticsearch.host: ${ES_HOST_SCREENINGS:-es.dev.cwds.tabordasolutions.net}
+    elasticsearch.host: ${ES_HOST_SCREENINGS:-localhost}
     elasticsearch.port: ${ES_PORT_SCREENINGS:-9300}
     elasticsearch.cluster: ${ES_CLUSTER_SCREENINGS:-taborda-dev-es}
     #Comma "," separated List of host:port pairs. Example: host1:port1,host2:port2
@@ -170,7 +201,7 @@ triggertables:
   laCountySpecificCode: 19
  
 systemCodeCache: 
-  preLoad: ${PRE_LOAD_SYSTEM_CODE_CACHE:-true}
+  preLoad: ${PRE_LOAD_SYSTEM_CODE_CACHE:-false}
   refreshAfter: ${SYSTEM_CODE_CACHE_REFRESH_AFTER:-31536000}
  
 webSecurity:
@@ -200,14 +231,14 @@ server:
       - type: console
 
 logging:
-  level: ${LOGLEVEL:-WARN}
+  level: ${LOGLEVEL:-INFO}
   loggers:
     "org.hibernate.SQL":
       # Use DEBUG to see SQL logged
       level: DEBUG
     "org.hibernate.type.descriptor.sql":
       # Use TRACE to see SQL parameters logged
-      level: DEBUG
+      level: ${LOGLEVEL_HIBERNATE_PARAMS:-DEBUG}
     "gov.ca.cwds.data.ApiHibernateInterceptor":
       # Use DEBUG or TRACE to see entities logged
       level: DEBUG
