--- a/config/api.yml
+++ b/config/api.yml
@@ -110,7 +110,38 @@ xaCmsDataSourceFactory:
       hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
       hibernate.connection.release_mode: auto
       connection.release_mode: auto
-      # hibernate.connection.provider_disables_autocommit: true
+      hibernate.connection.provider_disables_autocommit: true
+  xaProperties:
+      # Properties for DB2XADataSource
+      serverName: ${DB_CMS_HOST:-localhost}
+      portNumber: ${DB_CMS_PORT:-50000}
+      databaseName: ${DB_CMS_SERVICE:-DB0TDEV}
+      driverType: 4 # Type4 connection for DB2 DataSource
+
+xaCmsRsDataSourceFactory:
+  autoCommitByDefault: false
+  driverClass: com.ibm.db2.jcc.DB2Driver
+  user: ${DB_CMS_USER}
+  password: ${DB_CMS_PASSWORD}
+  url: ${DB_CMS_JDBC_URL}
+  xaDataSourceClassName: com.ibm.db2.jcc.DB2XADataSource
+  validationQuery: "/* XA/CMS Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
+  logValidationErrors: true
+  initialSize: 2
+  minSize: 2
+  maxSize: ${DB_CMS_CP_MAX_SIZE:-8}
+  minIdleTime: 1 minute
+  properties:
+      hibernate.dialect: org.hibernate.dialect.DB2Dialect
+      hibernate.show_sql: false
+      hibernate.default_schema: ${DB_CMSRS_SCHEMA}
+      hibernate.connection.autocommit: false
+      hibernate.current_session_context_class: jta
+      hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
+      hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
+      hibernate.connection.release_mode: auto
+      connection.release_mode: auto
+      hibernate.connection.provider_disables_autocommit: true
   xaProperties:
       # Properties for DB2XADataSource
       serverName: ${DB_CMS_HOST:-localhost}
@@ -142,43 +173,12 @@ xaNsDataSourceFactory:
       hibernate.connection.release_mode: auto
       connection.release_mode: auto
       hibernate.temp.use_jdbc_metadata_defaults: false
-      # hibernate.cache.use_second_level_cache: false
-      # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
+      hibernate.connection.provider_disables_autocommit: true
+      hibernate.cache.use_second_level_cache: false
+      hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
       # hibernate.cache.use_query_cache: false
-      # hibernate.connection.provider_disables_autocommit: true
   xaProperties:
       url: ${DB_NS_JDBC_URL}
-
-xaCmsRsDataSourceFactory:
-  autoCommitByDefault: false
-  driverClass: com.ibm.db2.jcc.DB2Driver
-  user: ${DB_CMS_USER}
-  password: ${DB_CMS_PASSWORD}
-  url: ${DB_CMS_JDBC_URL}
-  xaDataSourceClassName: com.ibm.db2.jcc.DB2XADataSource
-  validationQuery: "/* XA/CMS Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
-  logValidationErrors: true
-  initialSize: 2
-  minSize: 2
-  maxSize: ${DB_CMS_CP_MAX_SIZE:-8}
-  minIdleTime: 1 minute
-  properties:
-      hibernate.dialect: org.hibernate.dialect.DB2Dialect
-      hibernate.show_sql: false
-      hibernate.default_schema: ${DB_CMSRS_SCHEMA}
-      hibernate.connection.autocommit: false
-      hibernate.current_session_context_class: jta
-      hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
-      hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
-      hibernate.connection.release_mode: auto
-      connection.release_mode: auto
-      # hibernate.connection.provider_disables_autocommit: true
-  xaProperties:
-      # Properties for DB2XADataSource
-      serverName: ${DB_CMS_HOST:-localhost}
-      portNumber: ${DB_CMS_PORT:-50000}
-      databaseName: ${DB_CMS_SERVICE:-DB0TDEV}
-      driverType: 4 # Type4 connection for DB2 DataSource
 
 elasticsearch:
   # Screenings index
@@ -186,7 +186,7 @@ elasticsearch:
     # The old "elasticsearch.host" and "elasticsearch.port" will still work but not required when "elasticsearch.nodes" is provided.
     elasticsearch.host: ${ES_HOST_SCREENINGS:-localhost}
     elasticsearch.port: ${ES_PORT_SCREENINGS:-9300}
-    elasticsearch.cluster: ${ES_CLUSTER_SCREENINGS:-taborda-dev-es}
+    elasticsearch.cluster: ${ES_CLUSTER_SCREENINGS:-elasticsearch}
     #Comma "," separated List of host:port pairs. Example: host1:port1,host2:port2
     elasticsearch.nodes: ${ES_NODES_SCREENINGS}
     elasticsearch.alias: ${ES_ALIAS_SCREENINGS:-screenings}
