HOT-1956: XA transactions: JTA properties

--- a/config/api.yml
+++ b/config/api.yml
@@ -109,10 +109,11 @@ xaCmsDataSourceFactory:
       hibernate.current_session_context_class: jta
       hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
       hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
-      hibernate.connection.release_mode: auto
+      hibernate.connection.release_mode: on_close
+      connection.release_mode: on_close
       hibernate.connection.isolation: 1
-      connection.release_mode: auto
-      # hibernate.connection.provider_disables_autocommit: true
+      hibernate.cache.use_query_cache: false
+      hibernate.connection.provider_disables_autocommit: true
   xaProperties:
       # Properties for DB2XADataSource
       serverName: ${DB_CMS_HOST:-localhost}
@@ -142,10 +143,11 @@ xaCmsRsDataSourceFactory:
       hibernate.current_session_context_class: jta
       hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
       hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
-      hibernate.connection.release_mode: auto
+      hibernate.connection.release_mode: on_close
+      connection.release_mode: on_close
       hibernate.connection.isolation: 1
-      connection.release_mode: auto
-      # hibernate.connection.provider_disables_autocommit: true
+      hibernate.cache.use_query_cache: false
+      hibernate.connection.provider_disables_autocommit: true
   xaProperties:
       # Properties for DB2XADataSource
       serverName: ${DB_CMS_HOST:-localhost}
@@ -175,13 +177,13 @@ xaNsDataSourceFactory:
       hibernate.current_session_context_class: jta
       hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
       hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
-      hibernate.connection.release_mode: auto
-      connection.release_mode: auto
+      hibernate.connection.release_mode: on_close
+      connection.release_mode: on_close
       hibernate.temp.use_jdbc_metadata_defaults: false
       hibernate.connection.provider_disables_autocommit: true
+      hibernate.cache.use_query_cache: false
       hibernate.cache.use_second_level_cache: false
       # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
-      # hibernate.cache.use_query_cache: false
   xaProperties:
       url: ${DB_NS_JDBC_URL}
 
