--- a/config/jndi.properties
+++ b/config/jndi.properties
@@ -1,1 +1,1 @@
-java.naming.factory.initial=bitronix.tm.jndi.BitronixInitialContextFactory
+java.naming.factory.initial=org.apache.naming.java.javaURLContextFactory
