--- a/config/api.yml
+++ b/config/api.yml
@@ -212,7 +212,7 @@ triggertables:
   laCountySpecificCode: 19
  
 systemCodeCache: 
-  preLoad: ${PRE_LOAD_SYSTEM_CODE_CACHE:-false}
+  preLoad: ${PRE_LOAD_SYSTEM_CODE_CACHE:-true}
   refreshAfter: ${SYSTEM_CODE_CACHE_REFRESH_AFTER:-31536000}
  
 webSecurity:
