--- a/src/test/resources/config/test-api.yml
+++ b/src/test/resources/config/test-api.yml
@@ -21,7 +21,7 @@ nsDataSourceFactory:
   driverClass: org.h2.Driver
   user: sa
   password:
-  url: jdbc:h2:~/ns;INIT=create schema if not exists intakens\;set schema intakens
+  url: jdbc:h2:mem:intakens;INIT=create schema if not exists intakens\;set schema intakens       
   validationQuery: "/* MyService Health Check */ SELECT 1"
   logValidationErrors: true
   initialSize: ${DB_NS_CP_INITIAL_SIZE:-2}
