--- a/src/test/resources/config/test-api.yml
+++ b/src/test/resources/config/test-api.yml
@@ -104,6 +104,33 @@ xaCmsDataSourceFactory:
   xaProperties:
       url: ${DB_CMS_JDBC_URL:-jdbc:h2:mem:cwsint;INIT=create schema if not exists cwsint\;set schema cwsint}
 
+xaCmsRsDataSourceFactory:
+  autoCommitByDefault: false
+  driverClass: org.h2.Driver
+  user: sa
+  password:
+  url: ${DB_CMS_JDBC_URL:-jdbc:h2:mem:cwsrs1;INIT=create schema if not exists cwsrs1\;set schema cwsrs1}
+  xaDataSourceClassName: org.h2.jdbcx.JdbcDataSource
+  validationQuery: "/* MyService Health Check */ SELECT 1"
+  logValidationErrors: true
+  initialSize: 2
+  minSize: 2
+  maxSize: ${DB_CMS_CP_MAX_SIZE:-8}
+  minIdleTime: 1 minute
+  properties:
+      hibernate.dialect: org.hibernate.dialect.H2Dialect
+      hibernate.show_sql: false
+      hibernate.default_schema: ${DB_CMSRS_SCHEMA:-cwsrs1}
+      hibernate.connection.autocommit: false
+      hibernate.current_session_context_class: jta
+      hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
+      hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
+      hibernate.connection.release_mode: auto
+      connection.release_mode: auto
+      hibernate.connection.provider_disables_autocommit: true
+  xaProperties:
+      url: ${DB_CMS_JDBC_URL:-jdbc:h2:mem:cwsrs1;INIT=create schema if not exists cwsrs1\;set schema cwsrs1}
+
 xaNsDataSourceFactory:
   driverClass: org.h2.Driver
   user: ${DB_NS_USER:-sa}
@@ -128,10 +155,10 @@ xaNsDataSourceFactory:
       hibernate.connection.release_mode: auto
       connection.release_mode: auto
       # hibernate.temp.use_jdbc_metadata_defaults: false
-      hibernate.cache.use_second_level_cache: false
-      hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
       hibernate.cache.use_query_cache: false
-      # hibernate.connection.provider_disables_autocommit: true
+      hibernate.cache.use_second_level_cache: false
+      # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
+      hibernate.connection.provider_disables_autocommit: true
   xaProperties:
       url: ${DB_NS_JDBC_URL:-jdbc:h2:mem:intakens;INIT=create schema if not exists intakens\;set schema intakens}
 
