--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,6 @@ buildscript {
 plugins {
     id "java"
     id 'application'
-    id 'net.ltgt.apt' version '0.9'
     id "org.sonarqube" version "2.2.1"
 }
 
@@ -218,7 +217,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.google.errorprone/error_prone_annotations
 	testCompile group: 'com.google.errorprone', name: 'error_prone_annotations', version: '2.0.19'
 
-    apt 'org.mapstruct:mapstruct-processor:' + mapstructVersion
+    compileOnly "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 }
 
 task printProps doLast {
