--- a/config/api.yml
+++ b/config/api.yml
@@ -128,8 +128,8 @@ xaCmsDataSourceFactory:
 xaCmsRsDataSourceFactory:
   autoCommitByDefault: false
   driverClass: com.ibm.db2.jcc.DB2Driver
-  user: ${DB_CMS_USER}
-  password: ${DB_CMS_PASSWORD}
+  user: ${DB_CWSRS_USER}
+  password: ${DB_CWSRS_PASSWORD}
   url: ${DB_CMS_JDBC_URL}
   xaDataSourceClassName: com.ibm.db2.jcc.DB2XADataSource
   validationQuery: "/* XA/CMS Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
