--- a/config/api.yml
+++ b/config/api.yml
@@ -130,7 +130,7 @@ xaCmsRsDataSourceFactory:
   driverClass: com.ibm.db2.jcc.DB2Driver
   user: ${DB_CWSRS_USER}
   password: ${DB_CWSRS_PASSWORD}
-  url: ${DB_CMS_JDBC_URL}
+  url: ${DB_CWSRS_JDBC_URL}
   xaDataSourceClassName: com.ibm.db2.jcc.DB2XADataSource
   validationQuery: "/* XA/CMS Health Check */ SELECT 1 FROM SYSIBM.SYSDUMMY1 FOR READ ONLY WITH UR"
   logValidationErrors: true
