--- a/config/api.yml
+++ b/config/api.yml
@@ -116,7 +116,7 @@ xaCmsDataSourceFactory:
       hibernate.connection.release_mode: after_transaction
       connection.release_mode: after_transaction
       hibernate.connection.isolation: 2
-      hibernate.cache.use_query_cache: false
+      hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
       # hibernate.connection.provider_disables_autocommit: true
       # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
@@ -152,7 +152,7 @@ xaCmsRsDataSourceFactory:
       hibernate.connection.release_mode: after_transaction
       connection.release_mode: after_transaction
       hibernate.connection.isolation: 2
-      hibernate.cache.use_query_cache: false
+      hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
       # hibernate.connection.provider_disables_autocommit: true
       # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
@@ -189,7 +189,7 @@ xaNsDataSourceFactory:
       connection.release_mode: after_transaction
       hibernate.connection.isolation: 2
       hibernate.temp.use_jdbc_metadata_defaults: true
-      hibernate.cache.use_query_cache: false
+      hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
       # hibernate.connection.provider_disables_autocommit: true
       # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
