--- a/config/api.yml
+++ b/config/api.yml
@@ -154,6 +154,8 @@ xaCmsRsDataSourceFactory:
       hibernate.connection.isolation: 1
       hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
+      connection.timerLevelForQueryTimeOut: 2
+      connection.blockingReadConnectionTimeout: 120
       # hibernate.connection.provider_disables_autocommit: true
       # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
   xaProperties:
