--- a/config/shiro_v2-local.ini
+++ b/config/shiro_v2-local.ini
@@ -23,6 +23,7 @@ securityManager.cacheManager = $cacheManager
 securityManager.realm = $perryRealm
 
 [urls]
+/system-information = noSession, anon
 /application = noSession, anon
 /static/** = noSession, anon
 /swagger* = noSession, anon
