--- a/config/shiro_v2.ini
+++ b/config/shiro_v2.ini
@@ -22,6 +22,7 @@ securityManager.cacheManager = $cacheManager
 securityManager.realm = $perryRealm
 
 [urls]
+/system-information = noSession, anon
 /application = noSession, anon
 /admin/** = noSession, anon
 /static/** = noSession, anon
