--- a/config/shiro.ini
+++ b/config/shiro.ini
@@ -34,6 +34,7 @@ securityManager.cacheManager = $cacheManager
 securityManager.realm = $perryRealm
 
 [urls]
+/system-information = noSession, anon
 /application = noSession, anon
 /static/** = noSession, anon
 /swagger* = noSession, anon
