--- a/docker/DockerfileTests
+++ b/docker/DockerfileTests
@@ -8,6 +8,7 @@ USER root
 RUN mkdir $APP_PATH
 RUN mkdir ${APP_PATH}/build
 RUN mkdir ${GRADLE_CACHE}
+RUN mkdir ${APP_PATH}/lib
 
 WORKDIR $APP_PATH
 COPY buildSrc ./buildSrc
@@ -20,7 +21,7 @@ COPY entrypoint.sh .
 COPY gradle.properties .
 COPY gradlew .
 COPY settings.gradle .
-
+COPY build/gradle_cache ${GRADLE_CACHE}
 COPY docker/ferb-test/config/testConfig.yml ${APP_PATH}/config/testConfig.yml
 
 RUN ./gradlew build -x test -x functionalQATest --gradle-user-home=${GRADLE_CACHE} --refresh-dependencies
