SNAP-370: HOI Performance

--- a/config/api.yml
+++ b/config/api.yml
@@ -280,7 +280,7 @@ logging:
     "io.dropwizard.jersey.DropwizardResourceConfig":
       level: INFO
     "AUDIT":
-      level: ${LOGLEVEL:-ALL}
+      level: ${LOGLEVEL:-TRACE}
   appenders:
     - type: console
       threshold: ALL
