SNAP-370: HOI Performance

--- a/config/api.yml
+++ b/config/api.yml
@@ -282,16 +282,19 @@ logging:
     "AUDIT":
       level: ${LOGLEVEL:-TRACE}
   appenders:
-    - type: console
-      threshold: ALL
-      timeZone: UTC
-      target: stdout
-      logFormat: '[%date{ISO8601}] [LEVEL=%level] [REMOTE_ADDRESS=%X{REMOTE_ADDRESS}] [REQUEST_ID=%X{REQUEST_ID}] [SESSION_ID=%X{SESSION_ID}] [STAFF_ID=%X{STAFF_ID}] [STAFF_COUNTY=%X{STAFF_COUNTY}] [RESPONSE_STATUS=%X{RESPONSE_STATUS}] [THREAD=%thread] [LOGGER=%logger] [MESSAGE=%message] [THROWABLE=%throwable]%n'
+#    - type: console
+#    threshold: DEBUG
+#    timeZone: UTC
+#    target: stdout
+#    logFormat: '[%date{ISO8601}] [LEVEL=%level] [REMOTE_ADDRESS=%X{REMOTE_ADDRESS}] [REQUEST_ID=%X{REQUEST_ID}] [SESSION_ID=%X{SESSION_ID}] [STAFF_ID=%X{STAFF_ID}] [STAFF_COUNTY=%X{STAFF_COUNTY}] [RESPONSE_STATUS=%X{RESPONSE_STATUS}] [THREAD=%thread] [LOGGER=%logger] [MESSAGE=%message] [THROWABLE=%throwable]%n'
     - type: file
-      currentLogFilename: ferb.log
+      currentLogFilename: /Users/dsmith/ferb.log
       threshold: ALL
+      queueSize: 512
+      discardingThreshold: 0
+      maxFileSize: 20MB
       archive: true
-      archivedLogFilenamePattern: ferb-%d.log
+      archivedLogFilenamePattern: /Users/dsmith/ferb-%i.log
       archivedFileCount: 5
       timeZone: UTC
       logFormat: '[%date{ISO8601}] [LEVEL=%level] [REMOTE_ADDRESS=%X{REMOTE_ADDRESS}] [REQUEST_ID=%X{REQUEST_ID}] [SESSION_ID=%X{SESSION_ID}] [STAFF_ID=%X{STAFF_ID}] [STAFF_COUNTY=%X{STAFF_COUNTY}] [RESPONSE_STATUS=%X{RESPONSE_STATUS}] [THREAD=%thread] [LOGGER=%logger] [MESSAGE=%message] [THROWABLE=%throwable]%n'
