--- a/build.gradle
+++ b/build.gradle
@@ -432,9 +432,7 @@ task pushGitTag(type:Exec, dependsOn: createGitTag) {
     }
 }
 task publishDocker(dependsOn: [pushDockerVersionTagged, pushDockerLatest,
-                               pushIntegrationTestDockerVersionTagged, pushIntegrationTestDockerLatest,
-                               pushFunctionalTestDockerVersionTagged,
-                               pushSmokeTestVersionTagged] ) {
+                               pushIntegrationTestDockerVersionTagged, pushIntegrationTestDockerLatest ] ) {
     doLast {
         println 'Published'
     }
