Fix acceptance tests and wired into jenkens pull request

--- a/build.gradle
+++ b/build.gradle
@@ -439,3 +439,7 @@ task publishDocker(dependsOn: [pushDockerVersionTagged, pushDockerLatest,
         println 'Published'
     }
 }
+
+task showMeCache << {
+    configurations.compile.each { println it }
+}
